--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,30 @@ env:
   RUSTUP_MAX_RETRIES: 10
 
 jobs:
+  dist-x86_64-unknown-linux-musl:
+    name: dist (x86_64-unknown-linux-musl)
+    runs-on: ubuntu-20.04
+    container: rust:alpine
+    env:
+      RA_TARGET: x86_64-unknown-linux-musl
+      RUSTFLAGS: -Ctarget-feature=-crt-static
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: apk add --no-cache musl-dev
+
+    - name: Dist
+      run: cargo xtask dist
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: dist-x86_64-unknown-linux-musl
+        path: ./dist
+
   dist-x86_64-unknown-linux-gnu:
     name: dist (x86_64-unknown-linux-gnu)
     runs-on: ubuntu-16.04
@@ -41,7 +65,7 @@ jobs:
   publish:
     name: publish
     runs-on: ubuntu-16.04
-    needs: ['dist-x86_64-unknown-linux-gnu']
+    needs: ['dist-x86_64-unknown-linux-musl', 'dist-x86_64-unknown-linux-gnu']
     steps:
     - name: Install Nodejs
       uses: actions/setup-node@v1
@@ -63,6 +87,10 @@ jobs:
     - uses: actions/download-artifact@v1
       with:
         name: dist-x86_64-unknown-linux-gnu
+        path: dist
+    - uses: actions/download-artifact@v1
+      with:
+        name: dist-x86_64-unknown-linux-musl
         path: dist
 
     - name: Publish Release
