--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,10 +14,11 @@ jobs:
   dist-x86_64-unknown-linux-musl:
     name: dist (x86_64-unknown-linux-musl)
     runs-on: ubuntu-20.04
-    container: rust:alpine
-    env:
-      RA_TARGET: x86_64-unknown-linux-musl
-      RUSTFLAGS: -Ctarget-feature=-crt-static
+    container:
+      image: rust:alpine
+      env:
+        RA_TARGET: x86_64-unknown-linux-musl
+        RUSTFLAGS: -Ctarget-feature=-crt-static
 
     steps:
     - name: Install dependencies
