--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,7 @@ jobs:
       image: rust:alpine
       env:
         RA_TARGET: x86_64-unknown-linux-musl
+        RUSTFLAGS: -Ctarget-feature=-crt-static
       volumes:
         - /usr/local/cargo/registry
 
