--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,20 +16,18 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       RA_TARGET: x86_64-unknown-linux-musl
-      RUSTFLAGS: -Ctarget-feature=-crt-static
-      TEST_A: true
+      RUSTFLAGS: "-C linker=rust-ldd -C target-feature=-crt-static"
     container:
       image: rust:alpine
-      env:
-        RA_TARGET: x86_64-unknown-linux-musl
-        RUSTFLAGS: -Ctarget-feature=-crt-static
-        TEST_B: true
       volumes:
         - /usr/local/cargo/registry
 
     steps:
     - name: Print env
       run: env
+    
+    - name: Install rust-ldd
+      run: rustup component add llvm-tools-preview
 
     - name: Install dependencies
       run: apk add --no-cache git clang musl-dev
