--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Print env
       run: env
     
-    - name: Install rust-ldd
+    - name: Install rust-lld
       run: rustup component add llvm-tools-preview
 
     - name: Install dependencies
