--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,18 +16,14 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       RA_TARGET: x86_64-unknown-linux-musl
-      RUSTFLAGS: "-C linker=rust-lld -C target-feature=-crt-static"
+      RUSTFLAGS: "-C linker-flavor=ld.lld -C target-feature=-crt-static"
     container:
       image: rust:alpine
       volumes:
         - /usr/local/cargo/registry
 
-    steps:
-    - name: Print env
-      run: env
-
     - name: Install dependencies
-      run: apk add --no-cache git clang musl-dev
+      run: apk add --no-cache git clang lld musl-dev
 
     - name: Checkout repository
       uses: actions/checkout@v2
