--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       RA_TARGET: x86_64-unknown-linux-musl
-      RUSTFLAGS: "-C linker-flavor=ld.lld -C target-feature=-crt-static"
+      RUSTFLAGS: "-C link-arg=-fuse-ld=lld -C target-feature=-crt-static"
     container:
       image: rust:alpine
       volumes:
